--- a/docs/node/docs/pages/introduction/what-is-tevm-node.mdx
+++ b/docs/node/docs/pages/introduction/what-is-tevm-node.mdx
@@ -188,16 +188,16 @@ await client.mine({ blocks: 1 });
 
 ## Library Compatibility
 
-| Library                                                             | Support Level | Notes                                                                                         |
-| ------------------------------------------------------------------- | ------------- | --------------------------------------------------------------------------------------------- |
-| [**viem**](../getting-started/viem.mdx)                             | Native        | First-class native integration with all viem features                                         |
-| [**ethers.js**](../getting-started/ethers.mdx)                      | Full          | Both v5 and v6 via EIP-1193 provider                                                          |
-| [**web3.js**](https://github.com/web3/web3.js)                      | Full          | Via EIP-1193 provider                                                                         |
-| [**wagmi**](https://wagmi.sh/)                                      | Full          | Works as a wagmi connector                                                                    |
-| [**thirdweb**](https://thirdweb.com/)                               | Full          | Compatible with thirdweb's SDK                                                                |
-| [**Ponder**](https://ponder.sh/)                                    | Full          | Can be used to do advanced tracing in ponder handlers and import contracts into ponder config |
-| [**ethereumjs**](https://github.com/ethereumjs/ethereumjs-monorepo) | Native        | Implements the same interfaces as Ethereumjs                                                  |
-| Any EIP-1193 library                                                | Full          | Standard provider interface                                                                   |
+| Library                                                             | Support Level | Notes                                                                                                                                                          |
+| ------------------------------------------------------------------- | ------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [**viem**](../getting-started/viem.mdx)                             | Native        | First-class native integration with all viem features                                                                                                          |
+| [**ethers.js**](../getting-started/ethers.mdx)                      | Full          | Both v5 and v6 via EIP-1193 provider                                                                                                                           |
+| [**web3.js**](https://github.com/web3/web3.js)                      | Full          | Via EIP-1193 provider                                                                                                                                          |
+| [**wagmi**](https://wagmi.sh/)                                      | Full          | Works as a wagmi connector                                                                                                                                     |
+| [**thirdweb**](https://thirdweb.com/)                               | Full          | Compatible with thirdweb's SDK                                                                                                                                 |
+| [**Ponder**](https://ponder.sh/)                                    | Full          | Can be used to do advanced tracing in ponder handlers and import contracts into ponder config                                                                  |
+| [**ethereumjs**](https://github.com/ethereumjs/ethereumjs-monorepo) | Native        | Implements the same interfaces as Ethereumjs. Ethereumjs users can take advantage of Tevm StateManager to get Tevm like features such as forking in ethereumjs |
+| Any EIP-1193 library                                                | Full          | Standard provider interface                                                                                                                                    |
 
 ## Next Steps
 
@@ -267,16 +267,6 @@ await client.mine({ blocks: 1 });
       alignItems: "flex-start",
     }}
   >
-    <div
-      style={{
-        fontWeight: "var(--vocs-fontWeight_medium)",
-        marginBottom: "0.5rem",
-      }}
-    >
-      Create a Tevm Node
-    </div>
-    <div style={{ fontSize: "var(--vocs-fontSize_14)", textAlign: "left" }}>
       Get started building with Tevm in your own applications
-    </div>
   </Button>
 </div>
